<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulavelazquez.metegol.Ranking">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/txtNombre"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/txtPG"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/txtpp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:text="@string/txtpj"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        </LinearLayout>

        <ListView
            android:id="@+id/lstRanking"
            android:layout_width="match_parent"
            android:layout_height="224dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
