<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulavelazquez.metegol.Home">

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="75dp"
        android:onClick="goToRanking"
        android:text="@string/btnRanking"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnInformar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInformar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="8dp"
        android:onClick="goToInformar"
        android:text="@string/btnInformar"
        app:layout_constraintBottom_toTopOf="@+id/btnABM"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <Button
        android:id="@+id/btnGanadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnGanadores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRanking"
        app:layout_constraintVertical_bias="0.388" />

    <Button
        android:id="@+id/btnABM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="206dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="goToABM"
        android:text="@string/btnABM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintLeft_toRightOf="@+id/btnGanadores"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
