<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.paulavelazquez.metegol.Informar">

    <Spinner
        android:id="@+id/spnEquipoGanador"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginBottom="171dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="36dp"
        android:entries="@array/equipos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        app:layout_constraintRight_toRightOf="parent" />

    <Spinner
        android:id="@+id/spn_1A"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="27dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spn1B"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/spn_1A"
        android:layout_marginLeft="27dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spn2A"
        android:layout_width="153dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="62dp"
        app:layout_constraintBottom_toTopOf="@+id/spn2B"
        app:layout_constraintLeft_toRightOf="@+id/spn_1A"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="75dp"
        android:text="@string/txtEquipo2"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.743" />

    <Button
        android:id="@+id/btnInformar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnInformar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.551"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnEquipoGanador"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="75dp"
        android:text="@string/txtequipo1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="38dp" />

    <Spinner
        android:id="@+id/spn2B"
        android:layout_width="157dp"
        android:layout_height="30dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/spnEquipoGanador"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/spn1B"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.15"

        />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGanador"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="58dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="323dp" />
</android.support.constraint.ConstraintLayout>
